Remove unneeded duplication from nsCOMPtr.h.  b=208449  r=sicking  sr=jag